--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,30 @@
 # Production Dependencies for Constitution RAG System
+# Pinned versions for compatibility
 
-# Core LangChain Stack
-langchain>=0.1.0
-langchain-core>=0.1.0
-langchain-community>=0.1.0
-langchain-groq>=0.1.0
-langchain_experimental>=0.0.1
+# Core LangChain Stack (compatible versions)
+langchain==0.1.13
+langchain-core==0.1.33
+langchain-community==0.0.39
+langchain-groq==0.1.4
+langchain_experimental==0.0.55
 
 # Vector Database
-chromadb>=0.4.0
+chromadb==0.4.24
 
-# Embeddings
-sentence-transformers>=2.2.0
-
-# PDF Processing
-langchain-pymupdf4llm>=0.2.0
-pymupdf4llm>=0.1.0
+# Embeddings (includes transformers)
+sentence-transformers==2.2.2
 
 # Web Framework
-streamlit>=1.28.0
-fastapi>=0.104.0
-uvicorn>=0.24.0
+streamlit==1.28.1
 
 # Utilities
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-typing-extensions>=4.8.0
-tqdm>=4.66.0
-pyyaml>=6.0
-requests>=2.31.0
+python-dotenv==1.0.0
+pydantic==2.5.0
+tqdm==4.66.1
+pyyaml==6.0
+
+# Additional dependencies to ensure everything installs
+numpy==1.24.3
+scipy==1.11.4
+scikit-learn==1.3.2
+requests==2.31.0
