Fix: added langchain-community for Streamlit deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,14 @@
-# Core UI
-streamlit==1.28.1
+streamlit==1.54.0
 
-# LangChain (working compatible versions)
-langchain==0.1.20
+langchain==1.2.10
+langchain-core==1.2.13
 langchain-community==0.0.38
-langchain-core==0.1.52
 
-# Vector DB
+langchain-groq==1.1.2
+
 chromadb==1.5.0
-
-# Embeddings
 sentence-transformers==5.2.2
 
-# LLM provider (Groq via OpenAI-compatible client)
-openai==2.21.0
-
-# Environment management
-python-dotenv==1.0.1
-
-# Core dependencies (explicitly pinned for Streamlit Cloud stability)
-pydantic==2.6.4
-numpy>=1.24.0,<2.0.0
-requests>=2.31.0
+python-dotenv==1.2.1
+requests>=2.32.0
+numpy>=2.0.0
