--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ streamlit==1.54.0
 langchain==1.2.10
 langchain-core==1.2.13
 langchain-community==0.0.38
+langchain-openai
 
 langchain-groq==1.1.2
 
