--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 streamlit==1.54.0
 
-langchain==1.2.10
-langchain-core==1.2.13
+langchain==0.1.20
+langchain-core==0.1.52
 langchain-community==0.0.38
-langchain-openai
+langchain-groq==0.1.4
 
-langchain-groq==1.1.2
-
-chromadb==1.5.0
+chromadb==0.4.25
 sentence-transformers==5.2.2
 
 python-dotenv==1.2.1
 requests>=2.32.0
-numpy>=2.0.0
+numpy>=1.24,<2.0
